# weather-task1

./: .dockerignore  .flake8  Dockerfile  Makefile  README.md  __main__.py  pyproject.toml  requirements.txt
app/: _settings_loader.py
app/services/: weather.py
app/web/: application.py  constants.py
app/web/api/: router.py
app/web/api/weather/: __init__.py  views.py
settings/_service/: _base.py
