[tool.poetry]
name = "test-front-end-task"
version = "0.1.0"
description = ""
authors = ["Nazarii Arshynskyi <holy.mail.100@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
cachetools = "^5.3.1"
types-cachetools = "^5.3.0.6"
mypy = "^1.5.1"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
ujson = "^5.8.0"
pytest = "^7.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
